# neml2-hit

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmake/: nmhit.pc.in  nmhitConfig.cmake.in
include/nmhit/: BraceExpr.h  Node.h  TypeRegistry.h  nmhit.h
python/nmhit/: __init__.py  _cli.py
python/src/: _nmhit.cpp
python/tests/: test_nmhit.py
src/: BraceExpr.cpp  Lexer.l  Node.cpp  ParseDriver.h  Parser.y  abi_compat.cpp
tests/: CMakeLists.txt  test_hit.cpp
