[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "nmhit"
version = "0.1.2"
description = "Python bindings for the nmhit NEML2-flavored HIT parser"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing :: Markup",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.scikit-build]
cmake.build-type = "Release"
cmake.args = ["-DNMHIT_BUILD_TESTS=OFF", "-DNMHIT_BUILD_PYTHON=ON", "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"]
wheel.packages = ["python/nmhit"]
# Per-version wheels: one wheel per CPython release.
# When Python 3.12 becomes the project minimum, switch to a single abi3 wheel:
#   set wheel.py-api = "cp312" and build = "cp312-*".
# nanobind's STABLE_ABI requires Py_LIMITED_API >= 0x030C0000 (3.12); it silently
# no-ops on earlier Pythons, so cp39-abi3 would still produce a cpython-39 suffix.

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *-manylinux_i686"
test-requires = ["pytest"]
test-command = "pytest {project}/python/tests/ -v"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = {MACOSX_DEPLOYMENT_TARGET = "10.15"}  # std::filesystem requires 10.15+
